--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
-<html>
+<!doctype html>
+<html ng-app="BowlingApp">
 
 	<head>
-
-		<link rel="stylesheet" href="css/foundation.css" />
-	    <script src="js/vendor/modernizr.js"></script>
+	<!-- // <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.js"></script>
+	<!-- // <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-route.js"></script> -->
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-resource.js"></script>
+	<script src="js/loginLogic.js"></script>
+	
+	<link rel="stylesheet" href="css/foundation.css" />
+	<script src="js/vendor/modernizr.js"></script>
 
 	</head>
 
 
-	<body>
+	<body ng-controller="mainController">
 		<div class="row">
 			<br/><br/>
 			<h1>Sign Up/In</h1>
 			<div class="large-8 columns">
-				<p>Email: </p><input id="email" /><br/>
-				<p>Pass: </p><input id="password" /><br/>		
-				<button id="SignUp">Sign Up!</button>
-				<button id="LogIn">Log In!</button>
+				<p>Email: </p><input type="email" ng-model="email" /><br/>
+				<p>Pass: </p><input ng-model="password" /><br/>		
+				<!-- <button >Sign Up!</button> -->
+				<button ng-click="login()">Log In!</button>
 			</div>
 
 			<div class="large-4 columns">
-				<p>id: <span id="userID"></span></p>
-				<p>email: <span id="userEmail"></span></p>
-				<!-- <p>id: <span id="userID"></span></p> -->
+				<p>id: {{id}}</p>
+				<p>email: {{email}}</p>
 			</div>
 		</div>
 
-		<div class="row">
+<!-- 		<div class="row">
 			<br/><br/>
 			<h1>Leagues</h1>
 			<div class="large-8 columns">
@@ -39,19 +44,12 @@
 			<div class="large-4 columns">
 				<p>id: <span id="userID"></span></p>
 				<p>email: <span id="userEmail"></span></p>
-				<!-- <p>id: <span id="userID"></span></p> -->
 			</div>
 		</div>
-
+ -->
 
 	<script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-	<script src='client/lib/client.js'></script>
-    <script>
-      $(document).foundation();
-    </script>
-
-    <script src="js/scripts.js"></script>
+	<script src="js/foundation.min.js"></script>
 
 	</body>
 
