added signup capability

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="large-8 columns">
 				<p>Email: </p><input type="email" ng-model="email" /><br/>
 				<p>Pass: </p><input ng-model="password" /><br/>		
-				<!-- <button >Sign Up!</button> -->
+				<button ng-click="signUp()">Sign Up!</button>
 				<button ng-click="login()">Log In!</button>
 			</div>
 
