--- a/index.html
+++ b/index.html
@@ -31,22 +31,35 @@
 			</div>
 		</div>
 
-<!-- 		<div class="row">
+		<div class="row">
 			<br/><br/>
 			<h1>Leagues</h1>
-			<div class="large-8 columns">
-				<p>Email: </p><input id="email" /><br/>
-				<p>Pass: </p><input id="password" /><br/>		
-				<button id="SignUp">Sign Up!</button>
-				<button id="LogIn">Log In!</button>
+			<div class="large-6 columns">
+				<button ng-click="getLeagues()">Get Leagues</button>
+				<br/>
+				<ul>
+					<li ng-repeat="league in leagues">ID: {{league.id}}, Name: {{league.name}}</li>
+				</ul>
+				<table ng-show="leagues">
+					<thead>
+						<th>ID</th>
+						<th>Name</th>
+					</thead>
+					<tbody>
+						<tr ng-repeat="league in leagues">
+							<td>{{league.id}}</td>
+							<td>{{league.name}}</td>
+						</tr>
+
+					</tbody>
+				</table>
+			</div>
+			<div class="large-6 columns">
+			<h3>Create a League</h3>
 			</div>
 
-			<div class="large-4 columns">
-				<p>id: <span id="userID"></span></p>
-				<p>email: <span id="userEmail"></span></p>
-			</div>
 		</div>
- -->
+
 
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/foundation.min.js"></script>
