--- a/index.html
+++ b/index.html
@@ -37,25 +37,65 @@
 			<div class="large-6 columns">
 				<button ng-click="getLeagues()">Get Leagues</button>
 				<br/>
-				<ul>
+				<!-- <ul>
 					<li ng-repeat="league in leagues">ID: {{league.id}}, Name: {{league.name}}</li>
-				</ul>
+				</ul> -->
 				<table ng-show="leagues">
 					<thead>
 						<th>ID</th>
 						<th>Name</th>
+						<th>Get Info</th>
 					</thead>
 					<tbody>
 						<tr ng-repeat="league in leagues">
 							<td>{{league.id}}</td>
 							<td>{{league.name}}</td>
+							<td><button ng-click="getLeague(league.id)">Get More Info</button></td>
+
 						</tr>
 
 					</tbody>
 				</table>
 			</div>
 			<div class="large-6 columns">
-			<h3>Create a League</h3>
+				<h3>Create a League</h3>
+				<div>
+					<p>New League Name:</p><input ng-model="newLeagueName" />
+					<button ng-click="makeLeague()">Make!</button>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="row">
+			<br/><br/>
+			<h1>Bowlers</h1>
+			<div class="large-6 columns">
+				<button ng-click="getBowlers()">Get Bowlers</button>
+				<br/>
+				<table ng-show="bowlers">
+					<thead>
+						<th>ID</th>
+						<th>Name</th>
+						<th>Get Info</th>
+					</thead>
+					<tbody>
+						<tr ng-repeat="bowler in bowlers">
+							<td>{{bowler.id}}</td>
+							<td>{{bowler.name}}</td>
+							<td><button ng-click="getBowler(bowler.id)">Get More Info</button></td>
+
+						</tr>
+
+					</tbody>
+				</table>
+			</div>
+			<div class="large-6 columns">
+				<h3>Create a Bowler</h3>
+				<div>
+					<p>New Bowler Name:</p><input ng-model="newBowlerName" />
+					<button ng-click="makeBowler()">Make!</button>
+				</div>
 			</div>
 
 		</div>
