--- a/bootstrap template/leagues.html
+++ b/bootstrap template/leagues.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="templateApp">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>Static Top Navbar Example for Bootstrap</title>
-
+		<title>Leagues</title>
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.js"></script>
+		<script src="js/angularCode.js"></script>
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.css" rel="stylesheet">
 
@@ -25,9 +28,10 @@
 				width:100%;
 			}
 		</style>
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 
-	<body>
+	<body ng-controller="mainController"> 
 
 		<!-- Static navbar -->
 		<nav class="navbar navbar-default navbar-static-top">
@@ -72,58 +76,64 @@
 		<div class="bottom">
 			<div class="layout">
 				<div id="table">
-					<div class="smallLeagueBox">
-dfsdfssdfsdf
-					</div>
-					<div class="smallLeagueBox">
-sfdafsddsa
+					<div class="smallLeagueBox" ng-repeat="league in leagues">
+						<div class="smallLeagueBoxName">
+							<span>{{league.name}}</span>
+						</div>
+						<div class="smallLeagueBoxInfo">
+							<span>{{league.bowlers}} Bowlers, {{league.jackpot}} Jackpot</span>
+						</div>
+
 					</div>
 				</div>
-				<div id="leagueInfoBox">
-				hello2
+				<div class="leagueInfoBox">
+					<div class="leagueInfoBoxTitle"><span>Beginners</span></div>
+					<div class="bowlers">
+						<span class="title">Bowlers</span>
+						<br/>John Doe<br/>
+						<button class="btn" data-toggle="modal" data-target="#myModal">Add Bowlers</button>
+
+						<br/><br/>
+						{{hello}}
+						{{1+1}}
+					</div>
+					<div class="lotteries"><span class="title">Lotteries</span><br/>Balance: $2134242</div>
 				</div>
 			</div>
 
-			<!-- Main component for a primary marketing message or call to action -->
+			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+						<h4 class="modal-title" id="myModalLabel">Add Bowlers!</h4>
+					</div>
+					<div class="modal-body">
+						<div class="row">
+							<div class="col-lg-8 col-lg-offset-2">
+								 {{bowlers}}
+								<ul class="bowlerSelect">
+									<li class="bowlerSelectItem" ng-repeat="bowler in bowlers" ng-click="changeActiveState(bowler.id)" ng-class="{'bowlerSelectItemActive': getActiveBowlers(bowler.id)}">{{bowler.name}}</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			  </div>
+			</div>
 
 
 		</div> <!-- /container -->
 
-		<style>
-			.layout{
-				width: 100%;
-				background-color: rgba(100, 0, 225, .6);
-				min-height: 200px;
-				min-width: 100%;
-				height: 100%;
-			}
-			#table{
-				display: inline-block;
-				width: 30%;
-				float: left;
-				background-color: rgba(200, 10, 50, .6);
-				min-height: 300px;
-				padding-top: 10px;
-				padding-left: 5px;
-				padding-right: 5px;
-			}
-			.smallLeagueBox{
-				display: block;
-				width: 100%;
-				min-height: 125px;
-				background-color: black;
-				margin-bottom: 5px;
-			}
-			#leagueInfoBox{
-				float: right;
-				background-color: rgba(50, 240, 50, .6);
-				width: 70%;
-				min-height: 300px;
-			}
-		</style>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script type="text/javascript">
+		$(document).ready(function(){
+			// $('#myModal').modal("show");
 
-
-		<!-- // <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-		<!-- // <script src="js/bootstrap.js"></script> -->
+		});
+		</script>
+		<script src="js/bootstrap.js"></script>
 	</body>
 </html>
