--- a/bootstrap template/leagues.html
+++ b/bootstrap template/leagues.html
@@ -76,28 +76,26 @@
 		<div class="bottom">
 			<div class="layout">
 				<div id="table">
-					<div class="smallLeagueBox" ng-repeat="league in leagues">
+					<div class="smallLeagueBox" ng-repeat="league in leagues" ng-click="changeActiveLeague(league)" ng-class="{'smallLeagueBoxActive': league === activeLeague}">
 						<div class="smallLeagueBoxName">
 							<span>{{league.name}}</span>
 						</div>
 						<div class="smallLeagueBoxInfo">
-							<span>{{league.bowlers}} Bowlers, {{league.jackpot}} Jackpot</span>
+							<span>{{league.bowlers}} Bowlers, {{league.jackpot | currency}} Jackpot</span>
 						</div>
 
 					</div>
 				</div>
 				<div class="leagueInfoBox">
-					<div class="leagueInfoBoxTitle"><span>Beginners</span></div>
+					<div class="leagueInfoBoxTitle"><span>{{activeLeague.name}}</span></div>
 					<div class="bowlers">
 						<span class="title">Bowlers</span>
 						<br/>John Doe<br/>
 						<button class="btn" data-toggle="modal" data-target="#myModal">Add Bowlers</button>
-
-						<br/><br/>
-						{{hello}}
-						{{1+1}}
+						<br/>
+						total bowlers: {{activeLeague.bowlers}}
 					</div>
-					<div class="lotteries"><span class="title">Lotteries</span><br/>Balance: $2134242</div>
+					<div class="lotteries"><span class="title">Lotteries</span><br/>Balance: ${{activeLeague.jackpot}}</div>
 				</div>
 			</div>
 
