--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="css/foundation.css" />
 	<script src="js/vendor/modernizr.js"></script>
 
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+
 	</head>
 
 
@@ -38,9 +41,6 @@
 			<div class="large-12 columns">
 				<button ng-click="getLeagues()">Get Leagues</button>
 				<br/>
-				<!-- <ul>
-					<li ng-repeat="league in leagues">ID: {{league.id}}, Name: {{league.name}}</li>
-				</ul> -->
 				<table ng-show="leagues">
 					<thead>
 						<th>ID</th>
@@ -48,7 +48,8 @@
 						<th>Add Bowlers</th>
 						<th>Bowlers</th>
 						<th>Lotteries</th>
-						<th>Get Info</th>
+						<!-- <th>Get Info</th> -->
+						<!-- <th>Lottery Tickets</th> -->
 					</thead>
 					<tbody>
 						<tr ng-repeat="league in leagues">
@@ -60,13 +61,23 @@
 							</td>
 							<td>
 								<ul>
-									<li ng-repeat="b in league.bowlers">Name: {{b.name}}, ID: {{b.id}}</li>
+									<li ng-repeat="b in league.bowlers">
+										Name: {{b.name}}, ID: {{b.id}}
+										<a ng-click="buyTicket(league.id, b.id, league.lotteries)">Buy Tickets</a>
+									</li>
 								</ul>
 							</td>
 							<td>
-							{{league.lotteries}}
+								<ul>
+									<li ng-repeat="lottery in league.lotteries">
+										{{lottery}}
+										<br/>
+										<!-- Tickets:{{lottery.tickets}} -->
+										<span ng-repeat="ticket in lottery.tickets">{{ticket}}</span>
+									</li>
+								</ul>
 							</td>
-							<td><button ng-click="getLeague(league.id)">Get More Info</button></td>
+							<!-- <td><button ng-click="getLeague(league.id)">Get More Info</button></td> -->
 						</tr>
 
 					</tbody>
