added lots to controllers.js, working on logic to get /leagues working

--- a/app/index.html
+++ b/app/index.html
@@ -22,11 +22,12 @@
 
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="css/styles.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
 		<style type="text/css">
 			body {
-				min-height: 2000px;
+				min-height: 200px;
 			}
 
 			.navbar-static-top {
