--- a/app/pages/navbar.html
+++ b/app/pages/navbar.html
@@ -1,4 +1,4 @@
-	<nav class="navbar navbar-default navbar-static-top">
+	<nav class="navbar navbar-default navbar-static-top" ng-controller="navController">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -14,9 +14,10 @@
 					<li class="active"><a href="#/">Home</a></li>
 					<li><a href="#leagues">Leagues</a></li>
 					<li><a href="#contact">Add Bowlers</a></li>
+					<button ng-click="checkSignedIn()">Check Signed In</button>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Sign Out</a></li>
+					<li ng-if="signedIn()"><a href="">Sign Out</a></li>
 				</ul> 
 				</div><!--/.nav-collapse -->
 		</div>
