--- a/app/pages/leagues.html
+++ b/app/pages/leagues.html
@@ -34,7 +34,11 @@
 						</ul>
 						<div class="row"><div class="col-sm-6 col-sm-offset-3">
 							<ul class="list-group">
-								<li class="list-group-item" ng-repeat="bowler in activeLeague.bowlers"><i class="fa fa-user"></i>&nbsp;{{bowler.name}}</li>
+								<li class="list-group-item bowler-item" ng-repeat="bowler in activeLeague.bowlers"><i class="fa fa-user"></i>
+									&nbsp;{{bowler.name}}
+									<!-- <div class="buy-tickets-box">Buy Tickets</div> -->
+									<button class="buy-tickets-box">Buy Tickets</button>
+								</li>
 							</ul>
 						</div></div>
 
@@ -43,25 +47,26 @@
 						<ul>
 							<li ng-repeat="lottery in activeLeague.lotteries">
 								<br/>
-								<div class="row"><div class="col-sm-6 col-sm-offset-3">
+<!-- 								<div class="row"><div class="col-sm-6 col-sm-offset-3">
 									<ul class="list-group">
 										<li class="list-group-item" ng-repeat="ticket in lottery.tickets"><i class="fa fa-ticket"></i>&nbsp;
 											ID: {{ticket.id}}, BowlerID: {{ticket.bowler_id}}
 										</li>
 									</ul>
 								</div></div>
-							</li>
+ -->							</li>
+						</ul>
 
 							<hr/>
 
 							<div class="panel-group" role="tablist">
 								<div ng-repeat="lottery in activeLeague.lotteries" class="panel panel-default">
 									<div class="panel-heading" role="tab" id="collapseListGroupHeading1">
-										<h4 class="panel-title">
-											<a class="collapsed" role="button" data-toggle="collapse" href="#collapseListGroup1" aria-expanded="false" aria-controls="collapseListGroup1">
+										<h5 class="panel-title">
+											<button class="btn btn primary" data-target="#collapseListGroup1" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapseListGroup1">
 												Lottery ID: {{lottery.id}}, league ID: {{lottery.league_id}}, balance: {{lottery.balance}}, payout: {{lottery.payout}}
-											</a>
-										</h4>
+											</button>
+										</h5>
 									</div>
 									<div id="collapseListGroup1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading1">
 										<ul class="list-group">
@@ -72,7 +77,6 @@
 									</div>
 								</div>
 							</div>
-						</ul>
 
 					<br/>Balance: ${{activeLeague.jackpot}}</div>
 				</div>
@@ -89,7 +93,7 @@
 							<div class="col-lg-8 col-lg-offset-2">
 								<!-- {{activeLeague.otherBowlers}} -->
 								<ul class="list-group">
-									<li class="list-group-item noselect" ng-repeat="bowler in activeLeague.otherBowlers" ng-click="changeActiveState(bowler.id)" ng-class="{'active': getActiveBowlers(bowler.id)}"><i class="fa fa-user"></i>&nbsp;{{bowler.name}}</li>
+									<li class="list-group-item noselect" ng-repeat="bowler in activeLeague.otherBowlers" ng-click="changeActiveState(bowler.id)" ng-class="{'active': getActiveBowlers(bowler.id)}"><i class="fa fa-user"></i> &nbsp; {{bowler.name}}</li>
 								</ul>
 
 								<button class="btn btn-default" ng-click="addOtherBowlersToLeague()">Add Bowlers!</button>
@@ -107,7 +111,7 @@
 				<div class="modal-dialog" role="document">
 					<div class="modal-content">
 						<div class="modal-header">
-						<h4 class="modal-title" id="myModalLabel">Add Bowlers!</h4>
+						<h4 class="modal-title" id="myModalLabel">Add Leagues!</h4>
 					</div>
 					<div class="modal-body">
 						<div class="row">
