bowlers.length vs just bowlers array

--- a/app/pages/leagues.html
+++ b/app/pages/leagues.html
@@ -6,7 +6,7 @@
 							<span>{{league.name}}</span>
 						</div>
 						<div class="smallLeagueBoxInfo">
-							<span>{{league.bowlers}} Bowlers, {{league.jackpot | currency}} Jackpot</span>
+							<span>{{league.bowlers.length}} Bowlers, {{league.jackpot | currency}} Jackpot</span>
 						</div>
 					</div>
 					<div class="smallLeagueBox"  ng-click="">
