--- a/app/pages/navbar.html
+++ b/app/pages/navbar.html
@@ -14,7 +14,7 @@
 					<li class="active"><a href="#/">Home</a></li>
 					<li><a href="#leagues">Leagues</a></li>
 					<li><a href="#contact">Add Bowlers</a></li>
-					<button ng-click="checkSignedIn()">Check Signed In</button>
+					<!-- <button ng-click="checkSignedIn()">Check Signed In</button> -->
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li ng-if="signedIn()"><a href="">Sign Out</a></li>
