added button to trigger modal for drawing ticket

--- a/app/pages/leagues.html
+++ b/app/pages/leagues.html
@@ -93,6 +93,16 @@
 										</ul>
 									</div>
 								</div>
+								<div class="panel panel-default">
+									<div class="panel-heading" role="tab" id="collapseListGroupHeading1">
+										<h5 class="panel-title">
+											<button class="btn bowler-add-button" data-toggle="modal" data-target="#myModal" ng-click="getOtherBowlers()">
+												Draw Ticket For Lottery	
+											</button>
+										</h5>
+									</div>
+
+								</div>
 							</div>
 
 					<!-- <br/>Balance: ${{activeLeague.jackpot}}</div> -->
