--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,10 @@
 		<link href="css/styles.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+		<style type="text/css">
+		body{padding-top: 55px;}
+		</style>
+
 	</head>
 
 	<body>
