worked on some code

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
 	<body>
 
 		<!-- Static navbar -->
+		<div style="position: absolute; left: 0px; top: 0px; display: none; background: gold; padding: 0.3em; font-weight: bold;" id="loading">LOADING!!!</div>
 		<div ng-include="'pages/navbar.html'"></div>
 
 		<div ng-view></div>
