--- a/app/pages/navbar.html
+++ b/app/pages/navbar.html
@@ -17,7 +17,7 @@
 					<!-- <button ng-click="checkSignedIn()">Check Signed In</button> -->
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li ng-if="signedIn()"><a href="">Sign Out</a></li>
+					<li ng-if="signedIn()" ng-click="signOut()"><a href="">Sign Out</a></li>
 				</ul> 
 				</div><!--/.nav-collapse -->
 		</div>
