--- a/app/pages/leagues.html
+++ b/app/pages/leagues.html
@@ -11,9 +11,9 @@
 					</div>
 					<div class="smallLeagueBox"  ng-click="">
 						<div class="smallLeagueBoxName">
-							<span><a class="btn btn-link" data-toggle="modal" data-target="#addLeague">
-											Make League
-							</a></span>
+							<span class="" data-toggle="modal" data-target="#addLeague">
+										Make League
+							</span>
 
 							<!-- <span>Add New</span> -->
 						</div>
