--- a/app/pages/leagues.html
+++ b/app/pages/leagues.html
@@ -45,7 +45,7 @@
 								<div ng-repeat="lottery in activeLeague.lotteries" class="panel panel-default">
 									<div class="panel-heading" role="tab" id="collapseListGroupHeading1">
 										<h5 class="panel-title">
-											<button class="btn btn primary" data-target="#collapseListGroup1" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapseListGroup1"><i class="fa fa-ticket"></i> &nbsp; 
+											<button class="btn btn primary" data-target="#collapseListGroup1" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapseListGroup1" ng-click="sortTicketsByPerson()"><i class="fa fa-ticket"></i> &nbsp; 
 												Lottery ID: {{lottery.id}}, league ID: {{lottery.league_id}}, balance: {{lottery.balance}}, payout: {{lottery.payout}}
 											</button>
 										</h5>
@@ -62,7 +62,7 @@
 								<div class="panel panel-default">
 									<div class="panel-heading" role="tab" id="collapseListGroupHeading1">
 										<h5 class="panel-title">
-											<button class="btn bowler-add-button" data-toggle="modal" data-target="#myModal" ng-click="getOtherBowlers()">
+											<button class="btn bowler-add-button" data-toggle="modal" data-target="#drawTicket" ng-click="getOtherBowlers()">
 												Draw Ticket For Lottery	
 											</button>
 										</h5>
@@ -75,25 +75,41 @@
 				</div>
 			</div>
 
-			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal fade" id="drawTicket" tabindex="-1" role="dialog" aria-labelledby="drawTicket">
 				<div class="modal-dialog" role="document">
 					<div class="modal-content">
 						<div class="modal-header">
-						<h4 class="modal-title" id="myModalLabel">Add Bowlers!</h4>
+						<h4 class="modal-title" id="drawTicketLabel">Draw Ticket!</h4>
 					</div>
 					<div class="modal-body">
-						<div class="row">
-							<div class="col-lg-8 col-lg-offset-2">
-								<ul class="list-group">
-									<li class="list-group-item noselect" ng-repeat="bowler in activeLeague.otherBowlers" ng-click="changeActiveState(bowler.id)" ng-class="{'active': getActiveBowlers(bowler.id)}"><i class="fa fa-user"></i> &nbsp; {{bowler.name}}</li>
-								</ul>
-
-								<button class="btn btn-default" ng-click="addOtherBowlersToLeague()">Add Bowlers!</button>
+						<div ng-switch on="">
+							<div class="row" ng-switch-default>
+								<div class="col-lg-8 col-lg-offset-2">
+										<button class="btn btn-primary" ng-click="">
+											Draw Ticket!
+										</button>
+										<button class="btn" ng-click="">
+											Cancel!
+										</button>
+								</div>
 							</div>
+							<div class="row" ng-switch-when="">
+								<div class="col-lg-8 col-lg-offset-2">
+<!-- 										<button class="btn btn-primary" ng-click="">
+											Draw Ticket!
+										</button>
+										<button class="btn" ng-click="">
+											Cancel!
+										</button>
+ -->							
+ 								</div>
+							</div>
+
 						</div>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+						<button type="button" class="btn" data-dismiss="modal">Close</button>
 					</div>
 				</div>
 			  </div>
@@ -114,9 +130,13 @@
 										<input type="text" ng-model="newLeagueName" class="form-control" placeholder="New League" id="newLeague"/>
 									</div>
 								</div>
-								<button type="button" ng-click="addLeague()"class="btn btn-default" data-dismiss="modal">Add League</button>
 							</div>
 						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" ng-click="addLeague()" class="btn btn-primary" data-dismiss="modal">Add League</button>
+
+						<button type="button" class="btn" data-dismiss="modal">Close</button>
 					</div>
 				</div>
 			  </div>
@@ -124,22 +144,26 @@
 
 			<div class="modal fade" id="buyTicket" tabindex="-1" role="dialog" aria-labelledby="buyTicket">
 				<div class="modal-dialog" role="document">
-					<div class="modal-content">
+					<div class="modal-dialog modal-sm"><div class="modal-content">
 						<div class="modal-header">
 						<h4 class="modal-title" id="myModalLabel">Buy Ticket!</h4>
 					</div>
 					<div class="modal-body">
 						<!-- <div class="row"> -->
 							<!-- <div class="col-lg-8 col-lg-offset-2"> -->
-							Buy a Ticket for {{ticketBuyer.name}}?
+								<span style="text-align: center;">
+									Buy a Ticket for {{ticketBuyer.name}}?
+								</span>
+								<br/>
 							<!-- </div> -->
 						<!-- </div> -->
-						<button type="button" ng-click="buyTicket(ticketBuyer.id)" class="btn btn-primary" data-dismiss="modal">Buy!</button>
-
 					</div>
 					<div class="modal-footer">
+						<button type="button" ng-click="buyTicket(ticketBuyer.id)" class="btn btn-primary" data-dismiss="modal" style="text-align:center;">Buy!</button>
+
+						<button type="button" class="btn" data-dismiss="modal">Close</button>
 					</div>
-				</div>
+				</div></div>
 			  </div>
 			</div>
 
