form validation = true;

--- a/app/pages/leagues.html
+++ b/app/pages/leagues.html
@@ -95,6 +95,17 @@
 							</div>
 							<div class="row" ng-switch-when="">
 								<div class="col-lg-8 col-lg-offset-2">
+
+								_____ is the winner
+
+								# of pins: 
+								<div class="form-group">
+									<label for="newLeague" class="col-sm-2 control-label">New League</label>
+									<div class="col-sm-10">
+										<input type="text" ng-model="newLeagueName" class="form-control" placeholder="New League" id="newLeague"/>
+									</div>
+								</div>
+
 <!-- 										<button class="btn btn-primary" ng-click="">
 											Draw Ticket!
 										</button>
