--- a/app/pages/login.html
+++ b/app/pages/login.html
@@ -3,6 +3,9 @@
 		<div class="jumbotron">
 			<div class="row">
 				<div class="col-sm-6 col-sm-offset-3">
+					<div class="row"><div class="col-sm-10 col-sm-offset-2">
+						<span ng-show="badCreds" style="color:red;margin-left:9px;">Invalid Credentials.  Maybe try signing up?</span>
+					</div></div>
 					<div class="form-group">
 						<label for="inputEmail3" class="col-sm-2 control-label">Email</label>
 						<div class="col-sm-10">
@@ -16,10 +19,11 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<div class="col-sm-offset-2 col-sm-3">
-							<button type="submit" class="btn btn-default" ng-click="logIn()">Sign in</button>
-						</div>
-						<div class="col-sm-offset-2 col-sm-3">
+						<div class="col-sm-offset-4 col-sm-6">
+							<button type="submit" class="btn btn-default" ng-click="logIn()">Log in</button>
+						<!-- </div> -->
+						or
+						<!-- <div class="col-sm-offset-2 col-sm-3"> -->
 							<button type="submit" class="btn btn-default" ng-click="signUp()">Sign Up</button>
 						</div>
 
