--- a/app/pages/login.html
+++ b/app/pages/login.html
@@ -5,6 +5,7 @@
 				<div class="col-sm-6 col-sm-offset-3">
 					<div class="row"><div class="col-sm-10 col-sm-offset-2">
 						<span ng-show="badCreds" style="color:red;margin-left:9px;">Invalid Credentials.  Maybe try signing up?</span>
+						<span ng-show="emailTaken" style="color:red;margin-left:9px;">Email Taken.  Maybe try logging in?</span>
 					</div></div>
 					<div class="form-group">
 						<label for="inputEmail3" class="col-sm-2 control-label">Email</label>
